# rust-actix-api

./: .env.example  .gitignore  Cargo.toml
src/: lib.rs  main.rs  model.rs  routes.rs
src/controllers/: auth.rs  fallback.rs  mod.rs  product.rs  spare_part.rs  todo.rs  user.rs  welcome.rs
src/helpers/: auth.rs  database.rs  mod.rs  parse.rs  response.rs  validation.rs
src/middlewares/: cookie.rs  mod.rs
src/structs/: auth.rs  mod.rs  product.rs  spare_part.rs
