[package]
name = "actix_api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
time = "0.3.21"
serde_json = "1.0"
serde = "1.0"
actix-web = "4.2.1"
actix-cors = "0.6.2"
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = [ "runtime-actix-rustls", "postgres", "chrono" ] }
env_logger = "0.10.0"
lazy_static = "1.4"
async_once = "0.2.6"
chrono = { version = "0.4.22", features = ["serde"] }
jsonwebtoken = "8.3.0"
rust-argon2 = "1.0"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }